# simplecode

./: .gitignore  1.py  2_sum.py  3.c  CountSort.py  GCD_LCM.py  Gpackage.py  Lists.py  README.md  SUBprocess_read_console.py  halfday.c  recurring.py  reverseLink.py  sum_subarray.py  tDigits.py  takehome.md  takehome.py  test.ipynb  tmp.py
cpp_Interview/: CMakeLists.txt
cpp_Interview/BinaryTree/: CMakeLists.txt
cpp_Interview/LL/: CMakeLists.txt  main.cpp
cpp_Interview/common_types/LinkedList/: LinkedList.h
cpp_Interview/common_types/TreeNode/: BinaryTreeNode.h
cpp_Interview/temp/LinkedList/: main.cpp
cpp_Interview/utils/: print_2d.hpp
cpp_Interview/vscode/: cmake-kits.json  launch.json  settings.json
labuladong/cpp/: .envsetup.sh  CMakeLists.txt  add_new.sh  build_and_run.sh  for_run.sh  run_tdigits.sh  todo.md
labuladong/cpp/2_sum/: CMakeLists.txt  main.cpp
labuladong/cpp/BinaryTree/: CMakeLists.txt  main.cpp
labuladong/cpp/BinaryTreeTemp/: main.cpp
labuladong/cpp/LL/: CMakeLists.txt  main.cpp
labuladong/cpp/LL_getKthFromEnd/: CMakeLists.txt
labuladong/cpp/allPathsSourceTarget/: CMakeLists.txt  main.cpp
labuladong/cpp/atomic/: CMakeLists.txt  main.cpp
labuladong/cpp/binsearch/: main.cpp
labuladong/cpp/canPartition/: CMakeLists.txt
labuladong/cpp/change/: CMakeLists.txt  main.cpp
labuladong/cpp/checkInclusion/: CMakeLists.txt
labuladong/cpp/coinChange/: CMakeLists.txt  main.cpp
labuladong/cpp/common_types/: CMakeLists.txt
labuladong/cpp/countNodes/: main.cpp
labuladong/cpp/dailyTemperatures/: CMakeLists.txt
labuladong/cpp/detectCycle/: main.cpp
labuladong/cpp/findAnagrams/: main.cpp
labuladong/cpp/findErrorNums/: main.cpp
labuladong/cpp/findTargetSumWays/: main.cpp
labuladong/cpp/getRandom_LL/: CMakeLists.txt  main.cpp
labuladong/cpp/isMatch/: main.cpp
labuladong/cpp/isPalindrome/: CMakeLists.txt  main.cpp
labuladong/cpp/isValidBST/: CMakeLists.txt  main.cpp
labuladong/cpp/lengthOfLIS/: CMakeLists.txt
labuladong/cpp/lengthOfLongestSubstring/: main.cpp
labuladong/cpp/longestCommonSubsequence/: CMakeLists.txt
labuladong/cpp/longestPalindromeSubseq/: CMakeLists.txt
labuladong/cpp/lowestCommonAncestor/: CMakeLists.txt  main.cpp
labuladong/cpp/maxCoins/: CMakeLists.txt  main.cpp
labuladong/cpp/maxEnvelopes/: CMakeLists.txt  main.cpp
labuladong/cpp/maxSlidingWindow/: CMakeLists.txt
labuladong/cpp/maxSubArray/: CMakeLists.txt  main.cpp
labuladong/cpp/maximalSquare/: CMakeLists.txt  main.cpp
labuladong/cpp/minDepth/: main.cpp
labuladong/cpp/minDistance/: CMakeLists.txt  main.cpp
labuladong/cpp/minWindow/: CMakeLists.txt  main.cpp
labuladong/cpp/networkDelayTime/: main.cpp
labuladong/cpp/nextGreaterElement/: CMakeLists.txt  main.cpp
labuladong/cpp/note_template/: TreeTravel.cpp  backTrack.py  bfs.cpp  bisearch.cpp  slide_window.cpp
labuladong/cpp/openLock/: main.cpp
labuladong/cpp/permutation/: main.cpp
labuladong/cpp/permute_unique/: CMakeLists.txt  main.cpp
labuladong/cpp/preimageSizeFZF/: CMakeLists.txt
labuladong/cpp/reverseBetween/: CMakeLists.txt
labuladong/cpp/reverseKGroup/: main.cpp
labuladong/cpp/reverseList/: CMakeLists.txt  main.cpp
labuladong/cpp/rob213/: CMakeLists.txt  main.cpp
labuladong/cpp/robbt/: main.cpp
labuladong/cpp/searchBST/: main.cpp
labuladong/cpp/searchRange/: CMakeLists.txt
labuladong/cpp/ser_and_deser_297/: main.cpp
labuladong/cpp/subsets/: CMakeLists.txt  main.cpp
labuladong/cpp/superEggDrop/: CMakeLists.txt  main.cpp
labuladong/cpp/tDigits/: CMakeLists.txt  main copy.cpp  main.cpp  main_thread.cpp  tdigits.py  tdigits_opt.py
labuladong/cpp/temp/: CMakeLists.txt  main.cpp
labuladong/cpp/trailingZeroes/: CMakeLists.txt  main.cpp
leetcode/cpp/: .envsetup.sh  CMakeLists.txt  NOTE.md  NOTE_PaidOnly.md  ReadMe.md  add_new.sh  cpp.md
leetcode/cpp/2_sum/: CMakeLists.txt  main.cpp
leetcode/cpp/2_sumWithOrdered/: CMakeLists.txt  main.cpp
leetcode/cpp/ExamRoom/: CMakeLists.txt  main.cpp
leetcode/cpp/LL_getKthFromEnd/: main.cpp
leetcode/cpp/allPathsSourceTarget/: main.cpp
leetcode/cpp/binsearch/: CMakeLists.txt  main.cpp
leetcode/cpp/canFinish/: CMakeLists.txt  main.cpp
leetcode/cpp/canPartition/: main.cpp
leetcode/cpp/carPooling/: CMakeLists.txt  main.cpp
leetcode/cpp/change/: main.cpp
leetcode/cpp/checkInclusion/: main.cpp
leetcode/cpp/coinChange/: main.cpp
leetcode/cpp/countNodes/: CMakeLists.txt  main.cpp
leetcode/cpp/countPrimes/: CMakeLists.txt  main.cpp
leetcode/cpp/countSmaller/: CMakeLists.txt  main.cpp
leetcode/cpp/countSquares/: CMakeLists.txt  main.cpp
leetcode/cpp/dailyTemperatures/: main.cpp
leetcode/cpp/deleteNode/: CMakeLists.txt  main.cpp
leetcode/cpp/detectCycle/: CMakeLists.txt  main.cpp
leetcode/cpp/equationsPossible/: CMakeLists.txt  main.cpp
leetcode/cpp/eraseOverlapIntervals/: CMakeLists.txt  main.cpp
leetcode/cpp/findAnagrams/: CMakeLists.txt  main.cpp
leetcode/cpp/findCelebrity/: CMakeLists.txt  main.cpp
leetcode/cpp/findErrorNums/: CMakeLists.txt  main.cpp
leetcode/cpp/findKthLargest/: CMakeLists.txt  main.cpp
leetcode/cpp/findMedianSortedArrays/: CMakeLists.txt  main.cpp
leetcode/cpp/findMinArrowShots/: CMakeLists.txt  main.cpp
leetcode/cpp/findOrder/: CMakeLists.txt  main.cpp
leetcode/cpp/findRepeatedDnaSequences/: CMakeLists.txt  main.cpp
leetcode/cpp/findTargetSumWays/: CMakeLists.txt  main.cpp
leetcode/cpp/getRandom_LL/: main.cpp
leetcode/cpp/insertIntoBST/: CMakeLists.txt  main.cpp
leetcode/cpp/isBipartite/: CMakeLists.txt  main.cpp
leetcode/cpp/isMatch/: CMakeLists.txt  main.cpp
leetcode/cpp/isPalindrome/: main.cpp
leetcode/cpp/isPalindrome_LL/: CMakeLists.txt  main.cpp
leetcode/cpp/isValidBST/: main.cpp
leetcode/cpp/jump/: CMakeLists.txt  main.cpp
leetcode/cpp/kthSmallestBST/: CMakeLists.txt  main.cpp
leetcode/cpp/lengthOfLIS/: main.cpp
leetcode/cpp/lengthOfLongestSubstring/: CMakeLists.txt  main.cpp
leetcode/cpp/longestCommonSubsequence/: main.cpp
leetcode/cpp/longestPalindromeSubseq/: main.cpp
leetcode/cpp/rob/: main.cpp  (+1 more)
(+272 files in other folders)
