cmake_minimum_required(VERSION 3.0.0)
project(simplecode VERSION 0.1.0)

find_package(fmt CONFIG REQUIRED)

# set(CMAKE_CXX_STANDARD c++17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")

include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(temp)
add_subdirectory(2_sum)
add_subdirectory(LL)
add_subdirectory(BinaryTree)
add_subdirectory(permutation)
add_subdirectory(permute_unique)
add_subdirectory(subsets)
add_subdirectory(coinChange)
add_subdirectory(change)
add_subdirectory(openLock)
add_subdirectory(minDepth)
add_subdirectory(ser_and_deser_297)
add_subdirectory(detectCycle)
add_subdirectory(LL_getKthFromEnd)
add_subdirectory(binsearch)
add_subdirectory(searchRange)
add_subdirectory(minWindow)
add_subdirectory(checkInclusion)
add_subdirectory(findAnagrams)
add_subdirectory(lengthOfLongestSubstring)
add_subdirectory(lengthOfLIS)
add_subdirectory(maxEnvelopes)
